Fix spacing and font size of form text

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ p{
   border: solid black; 
   position: relative;    
   overflow: hidden; 
-  height: 60vh;
+  height: 55vh;
 }  
 
 .bg-img{ 
@@ -53,23 +53,59 @@ p{
   width: 20%; 
   height: auto; 
 } 
-
-.form-header{ 
-  font-size: 1.1rem; 
-} 
+/*  */
 
 label{ 
-  font-size: 0.7em;
+  font-size: 0.8em;
 } 
 
 .name-details,
 .contact-details,
-.password,
-.submit-button{ 
+.password{ 
   display: flex; 
   flex-direction: column;
 } 
 
 input{ 
-  width: 70vw;
+  width: 80vw; 
+}  
+
+label{ 
+  margin-left: 0.9vh;
+} 
+input, 
+button,
+.log-in{ 
+  margin-left: 0.9vh; 
+  margin-bottom: 1.5vh;
+} 
+
+.log-in{ 
+  font-weight: 200;
+}
+
+label, 
+input{ 
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+
+} 
+
+form{ 
+  border: solid green; 
+  font-size: 0.9em;   
+} 
+
+button{ 
+  background-color: #596D48; 
+  width: 30vw; 
+  height: auto; 
+  border-radius: 5px; 
+  color:white; 
+  font-weight: bold;
+}
+
+.form-text{ 
+  margin-top: 0.6vh;  
+  margin-left: 0.9vh;
+  margin-bottom: 1.5vh;
 }
